# flowview

./: .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  PLAN.md  README.md  RELEASE.md  SECURITY.md  package.json  pnpm-lock.yaml
.changeset/: add-events-hash-scope-helper.md  add-vite-events-package.md  config.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-demo.yml  release.yml
crates/flowmark-cli/: Cargo.toml
crates/flowmark-cli/src/: main.rs
crates/flowmark-cli/tests/: cli_tests.rs
crates/flowmark-compiler/: Cargo.toml
crates/flowmark-compiler/src/: codegen.rs  diagnostics.rs  javascript.rs  lib.rs  parser.rs  validation.rs
crates/flowmark-compiler/src/parser/: expressions.rs  html.rs  nodes.rs  text.rs
crates/flowmark-compiler/tests/: compiler_tests.rs
crates/flowview-cli/: Cargo.toml
crates/flowview-cli/src/: main.rs
crates/flowview-cli/tests/: cli_tests.rs
crates/flowview-compiler/: Cargo.toml
crates/flowview-compiler/src/: ast.rs  codegen.rs  cursor.rs  javascript.rs  lib.rs  validation.rs
crates/flowview-compiler/src/parser/: blocks.rs  html.rs  interpolation.rs  lexer.rs  mod.rs
crates/flowview-compiler/tests/: compiler_tests.rs
crates/flowview-wasm/: Cargo.toml
crates/flowview-wasm/src/: lib.rs
docs/: compiler-improvement-plan.md  compiler-session-context.md  events-compiler-plan-context.md  flowmark-spec.md  flowview-spec.md  spec-driven-development.md
docs/plans/: fix-attribute-escape-bug.md  flowmark-events-v2.md  flowview-events-v2.md  flowview-events-vanilla-vite-context.md  flowview-events-vanilla-vite.md
examples/astro-demo/: README.md  astro.config.mjs  package.json  tsconfig.json  vitest.config.ts
examples/astro-demo/e2e/: demo.spec.ts  events.spec.ts
examples/astro-demo/public/: web-editor-lite.min.js
examples/astro-demo/scripts/: compile-flow.mjs
examples/astro-demo/src/components/: CodeBlock.astro  CodeBlock.test.ts  DemoPage.astro  ExampleSection.astro  ExampleSection.test.ts  Features.astro  Footer.astro  Hero.astro  (+6 more)
examples/basic/: for.flow  if.flow  switch.flow
examples/hono-demo/: README.md  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
examples/hono-demo/e2e/: events.spec.ts
examples/hono-demo/src/: entry-client.ts  manifest.test.ts  manifest.ts  server.ts  virtual-events.d.ts
plans/: landing-page-plan.md
(+32 files in other folders)
