[package]
name = "flowmark-compiler"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "HTML template compiler with Angular-inspired control flow."
repository = "https://github.com/andersseen/flowmark"
keywords = ["template", "compiler", "html", "control-flow"]
categories = ["template-engine"]

[lib]
name = "flowmark_compiler"
path = "src/lib.rs"

[dependencies]
oxc_allocator = "0.137.0"
oxc_parser = "0.137.0"
oxc_span = "0.137.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
